Adjust scroll settings in configuration for improved responsiveness

--- a/config.ini
+++ b/config.ini
@@ -9,8 +9,8 @@ hidinput_%(name)s = probesysfs,provider=hidinput
 window_icon = None
 window_size = 640x480
 # this will allow the scrollview to work like a mobile app instead of default kivy one
-scroll_timeout = 300
-scroll_distance = 10
+scroll_timeout = 150  # Lower scroll timeout
+scroll_distance = 20
 
 [postproc]
 jitter = tuio, 0.02
